--- a/boards/shields/nathan-chocofi/nathan_chocofi.zmk.yml
+++ b/boards/shields/nathan-chocofi/nathan_chocofi.zmk.yml
@@ -1,13 +1,12 @@
 file_format: "1"
-id: corne
-name: Corne
+id: chocofi
+name: Chocofi
 type: shield
 url: https://github.com/NathanDSanta/zmk-config-NathanKb/
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
   - keys
-  - display
 siblings:
-  - corne_left
-  - corne_right
+  - chocofi_left
+  - chocofi_right
