--- a/boards/shields/chocofi/chocofi.conf
+++ b/boards/shields/chocofi/chocofi.conf
@@ -2,3 +2,4 @@ CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WPM=y
 CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
