--- a/boards/shields/chocofi/chocofi.conf
+++ b/boards/shields/chocofi/chocofi.conf
@@ -3,3 +3,4 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WPM=y
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=Y
