--- a/boards/shields/chocofi/chocofi.dtsi
+++ b/boards/shields/chocofi/chocofi.dtsi
@@ -7,6 +7,7 @@
 
 &foostan_corne_5col_layout {
   transform = <&default_transform>;
+  kscan = &kscan0;
 };
 
 // Row pins definition for both halves
@@ -44,7 +45,6 @@
 
   //physical layout and kscan selection
   chosen {
-    zmk,kscan = &kscan0;
     zmk,physical-layout = &foostan_corne_5col_layout; 
   };
 };
